# Larpimony

./: README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
.github/workflow/: build.yml
.github/workflows/: deploy.yml  release.yml
public/extensions/js/: sets.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: BlocklyEditor.tsx  BrowserCompatibilityModal.tsx  CreditsModal.tsx  ExportModal.tsx  ExtensionMenu.tsx  HeaderBar.tsx  ImageTab.tsx  PropertiesPanel.tsx  SettingsModal.tsx  SoundTab.tsx  SpritePanel.tsx  StageView.tsx  TabSection.tsx  TweenTab.tsx  VideoTab.tsx  WelcomeModal.tsx
src/lib/: blockVisibility.ts  browser.ts  colors.ts  config.ts  export.worker.ts  index.ts  runtime.ts  settings.ts  sprites.ts  toolbox.ts  toolbox.xml  types.ts  waveform.worker.ts
src/lib/blocks/: appearance.ts  audio.ts  defaultInputBlocks.ts  dictionaries.ts  expandable.ts  functions.ts  lists.ts  math.ts  motion.ts  owo.ts  procedures.ts  sensors.ts  test.ts  text.ts  timing.ts
src/lib/extensions/: bridge.ts  builtinExtensions.ts  manager.ts  types.ts  worker.ts
src/lib/fields/: color-wheel.ts
src/lib/patches/: checkbox.ts  renderer.ts
src/routes/: +page.svelte
src/styles/: editor.css
src/workers/: export.worker.ts  transcription.worker.ts
