[package]
name = "Antimony"
version = "0.1.0"
description = "A video editor that uses blocks to control sources."
authors = ["Gen1x", "dotun", "ash", "rlockzo", "Puzzlingggg", "ddededodediamante", "Lord Cat"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
